# qml_inspiratory

./: CMakeLists.txt  README.md  file_explorer.qml  main.cpp  resource.qrc  rowvsrowlayout.qml
